README.md edited online with Bitbucket